Внесены правки. До деланы страницы групп, пользователи и темы

--- a/SibCCSPETest.Admin/SibCCSPETest.Admin.csproj
+++ b/SibCCSPETest.Admin/SibCCSPETest.Admin.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorPro.Spinkit" Version="1.2.0" />
     <PackageReference Include="MudBlazor" Version="8.7.0" />
   </ItemGroup>
 
