--- a/SibCCSPETest/SibCCSPETest.csproj
+++ b/SibCCSPETest/SibCCSPETest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorPro.Spinkit" Version="1.2.0" />
     <PackageReference Include="MudBlazor" Version="8.7.0" />
   </ItemGroup>
 
