--- a/SibCCSPETest.Shared/SibCCSPETest.Shared.csproj
+++ b/SibCCSPETest.Shared/SibCCSPETest.Shared.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\SibCCSPETest.ServiceBase\SibCCSPETest.ServiceBase.Server\SibCCSPETest.ServiceBase.Server.csproj" />
   </ItemGroup>
 
 </Project>
